# KoHighlights

./: .gitignore  IMPLEMENTATION_STATUS.md  MOBILE_SETUP.md  boot_config.py  dev_install.sh  gui_about.py  gui_auto_info.py  gui_edit.py  gui_filter.py  gui_main.py  gui_status.py  gui_toolbar.py  main.py  pixi.toml  pyproject.toml  run.py  secondary.py  workspace.toml
bases/app/: .env  pyproject.toml
bases/app/src/kohighlights/app/: __init__.py  main.py
components/book_store/: pyproject.toml
components/book_store/src/kohighlights/book_store/: __init__.py  settings.py  sqlite_store.py
components/file_scanner/: pyproject.toml
components/file_scanner/src/kohighlights/file_scanner/: __init__.py  scanner.py
components/highlight_exporter/: pyproject.toml
components/highlight_exporter/src/kohighlights/highlight_exporter/: __init__.py  core.py
components/highlight_merger/: pyproject.toml
components/highlight_merger/src/kohighlights/highlight_merger/: __init__.py  merger.py
components/lua_codec/: pyproject.toml
components/lua_codec/src/kohighlights/lua_codec/: __init__.py  core.py
components/models/: pyproject.toml
components/models/src/kohighlights/models/: __init__.py  core.py
components/ui/: pyproject.toml
components/ui/src/kohighlights/ui/: __init__.py  state.py
components/ui/src/kohighlights/ui/components/: book_info.py  highlights_panel.py  toolbar.py
components/ui/src/kohighlights/ui/dialogs/: about_dialog.py  comment_dialog.py  export_dialog.py  filter_dialog.py
components/ui/src/kohighlights/ui/views/: books_view.py  highlights_view.py
components/use_cases/: pyproject.toml
components/use_cases/src/kohighlights/use_cases/: __init__.py  export_highlights.py  filter_highlights.py  manage_books.py  merge_highlights.py  scan_books.py
my-app/: README.md  pyproject.toml
projects/desktop/: pyproject.toml
tauri/KoHighlights/: MIGRATION_PLAN.md  package.json  tsconfig.json
tauri/KoHighlights/src/: App.css  App.tsx
tauri/KoHighlights/src-tauri/: Cargo.toml  tauri.conf.json
tauri/KoHighlights/src-tauri/capabilities/: default.json  mobile.json
tauri/KoHighlights/src-tauri/src/: error.rs  exporter.rs  lib.rs  main.rs  merger.rs  models.rs  platform.rs  scanner.rs
tauri/KoHighlights/src-tauri/src/commands/: books.rs  export.rs  filter.rs  highlights.rs  merge.rs  mod.rs  notes.rs  scan.rs  settings.rs
tauri/KoHighlights/src-tauri/src/lua/: decode.rs  encode.rs  mod.rs
tauri/KoHighlights/src-tauri/src/store/: book_store.rs  mod.rs  notes_store.rs  settings_store.rs
tauri/KoHighlights/src/api/: index.ts
tauri/KoHighlights/src/components/books/: BookInfoPanel.tsx  BooksTable.tsx  HighlightsPanel.tsx
tauri/KoHighlights/src/components/dialogs/: AboutDialog.tsx  ArchiveDialog.tsx  DeleteDialog.tsx  ExportDialog.tsx  MergeDialog.tsx
tauri/KoHighlights/src/components/layout/: AppToolbar.tsx  FilterBar.tsx
tauri/KoHighlights/src/hooks/: useScan.ts
tauri/KoHighlights/src/pages/: BooksPage.tsx  HighlightsPage.tsx  NotesPage.tsx
tauri/KoHighlights/src/store/: app-store.ts
tauri/KoHighlights/src/types/: index.ts
