[tool.poetry]
name = "kohighlights-workspace"
version = "2.0.0"
description = "KOHighlights - KOReader highlights manager (Polylith workspace)"
authors = ["noEmbryo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = ">=0.21.0"
requests = "^2.31"
beautifulsoup4 = "^4.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
mypy = "^1.5"
ruff = "^0.1"
polylith-cli = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Development path configuration — all component src/ paths
[tool.pytest.ini_options]
testpaths = ["components", "bases"]

[tool.ruff]
line-length = 100
