[project]
name = "kohighlights-app"
version = "2.0.0"
description = "KoHighlights – application base (Flet entry point)"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "kohighlights-models",
    "kohighlights-use-cases",
    "kohighlights-ui",
    "kohighlights-book-store",
    "kohighlights-highlight-merger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kohighlights"]

[tool.hatch.build.targets.editable]
path = "src"
