[tool.poetry]
name = "kohighlights-book-store"
version = "2.0.0"
description = "KoHighlights – SQLite book archive and settings persistence"
authors = ["noEmbryo"]
packages = [{include = "kohighlights", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
kohighlights-models = {path = "../../components/models", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
