[project]
name = "kohighlights-file-scanner"
version = "2.0.0"
description = "KoHighlights – KOReader .sdr filesystem scanner"
requires-python = ">=3.10"
dependencies = [
    "kohighlights-models",
    "kohighlights-lua-codec",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kohighlights"]

[tool.hatch.build.targets.editable]
path = "src"
