[project]
name = "kohighlights-highlight-exporter"
version = "2.0.0"
description = "KoHighlights – multi-format highlight exporter"
requires-python = ">=3.10"
dependencies = [
    "kohighlights-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kohighlights"]

[tool.hatch.build.targets.editable]
path = "src"
