[project]
name = "kohighlights-highlight-merger"
version = "2.0.0"
description = "KoHighlights – highlight merge/sync between devices"
requires-python = ">=3.10"
dependencies = [
    "kohighlights-models",
    "kohighlights-lua-codec",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kohighlights"]

[tool.hatch.build.targets.editable]
path = "src"
