[project]
name = "kohighlights-lua-codec"
version = "2.0.0"
description = "KoHighlights – Lua metadata file codec"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kohighlights"]

[tool.hatch.build.targets.editable]
path = "src"
