[tool.poetry]
name = "kohighlights-models"
version = "2.0.0"
description = "KoHighlights – shared domain models"
authors = ["noEmbryo"]
packages = [{include = "kohighlights", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
