[project]
name = "kohighlights-ui"
version = "2.0.0"
description = "KoHighlights – Flet UI component"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "kohighlights-models",
    "kohighlights-use-cases",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kohighlights"]

[tool.hatch.build.targets.editable]
path = "src"
