[tool.poetry]
name = "kohighlights-use-cases"
version = "2.0.0"
description = "KoHighlights – application use cases (business logic)"
authors = ["noEmbryo"]
packages = [{include = "kohighlights", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
kohighlights-models            = {path = "../../components/models",            develop = true}
kohighlights-lua-codec         = {path = "../../components/lua_codec",         develop = true}
kohighlights-book-store        = {path = "../../components/book_store",        develop = true}
kohighlights-file-scanner      = {path = "../../components/file_scanner",      develop = true}
kohighlights-highlight-exporter = {path = "../../components/highlight_exporter", develop = true}
kohighlights-highlight-merger  = {path = "../../components/highlight_merger",  develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
