[project]
name = "kohighlights-use-cases"
version = "2.0.0"
description = "KoHighlights – application use cases (business logic)"
requires-python = ">=3.10"
dependencies = [
    "kohighlights-models",
    "kohighlights-lua-codec",
    "kohighlights-book-store",
    "kohighlights-file-scanner",
    "kohighlights-highlight-exporter",
    "kohighlights-highlight-merger",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kohighlights"]

[tool.hatch.build.targets.editable]
path = "src"
